setup openGL renderer

--- a/androidProject/res/layout/activity_main.xml
+++ b/androidProject/res/layout/activity_main.xml
@@ -12,5 +12,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
+    
+    <android.opengl.GLSurfaceView
+        android:id="@+id/surfaceView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.64" />
 
 </RelativeLayout>
