--- a/androidProject/res/layout/activity_visualisation.xml
+++ b/androidProject/res/layout/activity_visualisation.xml
@@ -7,23 +7,24 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Visualisation" >
+    tools:context=".Visualisation" 
+    android:id="@+id/rootView">
 
-    <SurfaceView
+    <!-- <SurfaceView
         android:id="@+id/surfaceView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true" /> -->
 
     <Button
         android:id="@+id/menuButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/surfaceView"
-        android:layout_alignTop="@+id/surfaceView"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
         android:text="@string/menu_button" />
 
 </RelativeLayout>
