--- a/androidProject/res/layout/activity_main.xml
+++ b/androidProject/res/layout/activity_main.xml
@@ -2,21 +2,57 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:padding="0dp"
     tools:context=".MainActivity" >
 
-    <TextView
+    <ImageView
+        android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
-    
-    <android.opengl.GLSurfaceView
-        android:id="@+id/surfaceView2"
-        android:layout_width="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:contentDescription="@string/app_name"
+        android:scaleType="centerCrop"
+        android:src="@drawable/fondspace" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0.64" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:orientation="vertical" >
+
+        <ImageButton
+            android:id="@+id/imageButtonPlay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#0000"
+            android:contentDescription="@string/app_name"
+            android:onClick="startGame"
+            android:paddingBottom="25dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/btn" />
+
+        <ImageButton
+            android:id="@+id/imageButtonOptions"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/app_name"
+            android:onClick="startOptions"
+            android:paddingBottom="25dp"
+            android:scaleType="centerInside"
+            android:background="#0000"
+            android:src="@drawable/btn" />
+
+        <ImageButton
+            android:id="@+id/imageButtonStory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/app_name"
+            android:onClick="startStory"
+            android:scaleType="centerInside"
+            android:background="#0000"
+            android:src="@drawable/btn" />
+    </LinearLayout>
 
 </RelativeLayout>
