cordova file plugin

--- a/jeffJQMobile/platforms/android/res/xml/config.xml
+++ b/jeffJQMobile/platforms/android/res/xml/config.xml
@@ -5,6 +5,10 @@
         <param name="android-package" value="org.apache.cordova.whitelist.WhitelistPlugin" />
         <param name="onload" value="true" />
     </feature>
+    <feature name="File">
+        <param name="android-package" value="org.apache.cordova.file.FileUtils" />
+        <param name="onload" value="true" />
+    </feature>
     <allow-intent href="market:*" />
     <name>HelloCordova</name>
     <description>
